# Remitwise-Contracts

./: .gitignore  ASSIGNMENT_COMPLETION.md  Cargo.toml  EVENTS.md  IMPLEMENTATION_SUMMARY.md  INDEXER_FEATURE.md  PR_DESCRIPTION.md  README.md  SCHEDULE_GAS_BENCHMARKS_SUMMARY.md  STORAGE_LAYOUT.md  TAGGING_FEATURE.md  TEST_EXECUTION_GUIDE.md  TEST_VERIFICATION_GUIDE.md  THREAT_MODEL.md  VERIFICATION_CHECKLIST.md  check_ci.sh  data_migration_test_output.txt  fix_reporting.py  test-output.txt
cli/src/: main.rs
data_migration/: Cargo.toml  README.md
data_migration/src/: lib.rs
insurance/: Cargo.toml
insurance/src/: lib.rs  next_payment_scheduling_tests.rs  test.rs
insurance/tests/: caps_and_stats_tests.rs  gas_bench.rs  ratio_guard.rs  stress_tests.rs
reporting/: Cargo.toml  README.md
reporting/src/: lib.rs  paginate_dependency_tests.rs  tests.rs  tests_auth_acl.rs  tests_updated.rs
reporting/test_snapshots/tests/: test_archive_old_reports.1.json  test_archive_ttl_extended_on_archive_reports.1.json  test_archive_unauthorized.1.json  test_calculate_health_score.1.json  test_calculate_health_score_bounds_guarantee.1.json  test_calculate_health_score_edge_cases.1.json  test_calculate_health_score_no_insurance.1.json  test_calculate_health_score_overflow_protection.1.json  test_cleanup_old_reports.1.json  test_cleanup_unauthorized.1.json  test_configure_addresses_succeeds.1.json  test_configure_addresses_unauthorized.1.json  test_get_bill_compliance_report.1.json  test_get_financial_health_report.1.json  (+34 more)
reporting/tests/: gas_bench.rs  insurance_report_ratio.rs
(+145 files in other folders)
