[package]
name = "data_migration"
version = "0.1.0"
edition = "2021"
description = "Data migration, import/export utilities for Remitwise contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
csv = "1.3"
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
serde_json = "1.0"
proptest = "1"
