[package]
name = "reporting"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.1.1"
remitwise-common = { path = "../remitwise-common" }

[dev-dependencies]
soroban-sdk = { version = "21.1.1", features = ["testutils"] }
testutils = { path = "../testutils" }
